productions/veadk/archives/1.0.0/zh/components/agent/runtime.mdx
---
title: "运行时"
en_link: "/productions/veadk/archives/1.0.0/en/components/agent/runtime"
---

运行时决定智能体「内层循环」如何执行——即每一轮如何调用模型、解析意图、调用工具。默认运行时基于 Google ADK 的内置执行流程，开箱即用；你也可以切换执行后端，或在执行流程上插入统一的处理逻辑，而无需改动智能体本身。

## 默认运行时

默认即为 ADK 运行时，无需额外配置：

```python lines
from veadk import Agent

agent = Agent(name="assistant")  # 默认使用 ADK 运行时
```

## 切换执行后端

通过 `runtime` 选择内层循环的执行后端：

使用 Codex 运行时前需安装其 Python SDK：

```bash lines
pip install openai-codex
```

<Warning>
  Codex 运行时可能根据 Codex SDK 的策略执行命令和访问文件。请在隔离环境中运行可信任务，并限制进程可访问的凭证和数据。VeADK 1.0.0 不会覆盖 SDK 的沙箱、网络和操作审核默认值。
</Warning>

```python lines
agent = Agent(name="assistant", runtime="codex")
```

| 取值 | 说明 |
| --- | --- |
| `adk`（默认） | 使用 Google ADK 内置的执行流程，适用于绝大多数场景。 |
| `codex` | 使用 Codex SDK 执行智能体内层循环；需要 `openai-codex`。 |

## 请求处理

在不侵入业务逻辑的前提下，可为每次执行插入统一的横切处理。将处理器传入 `run_processor` 即可，例如接入身份认证做登录态校验：

```python lines
from veadk import Agent
from veadk.integrations.ve_identity import AuthRequestProcessor

agent = Agent(name="assistant", run_processor=AuthRequestProcessor())
```

不设置时使用默认处理器，不改变任何行为。VeADK 内置 `AuthRequestProcessor` 作为身份认证的开箱即用实现。

### 自定义处理器

所有处理器都继承抽象基类 `BaseRunProcessor`，实现其 `process_run(runner, message)` 方法。该方法返回一个包裹本轮「事件流」的装饰器，从而让你：

- 在整轮执行的**前后**插入逻辑（如鉴权、日志、性能监控）；
- **拦截、改写或注入**执行过程中产生的事件；
- 在此基础上实现重试等控制逻辑。

```python lines
from veadk.processors.base_run_processor import BaseRunProcessor

class LoggingProcessor(BaseRunProcessor):
    def process_run(self, runner, message, **kwargs):
        def decorator(event_generator):
            async def wrapper():
                # 执行前：记录起始、校验等
                async for event in event_generator():
                    yield event  # 可在此拦截或改写事件
                # 执行后：汇总、上报等
            return wrapper
        return decorator
```
